[package]
name = "ratatui-flow"
version = "0.1.1"
edition = "2024"
authors = ["Liangdi <wu@liangdi.me>"]
description = """
Node graph / flow diagram widgets for ratatui
"""
documentation = "https://docs.rs/ratatui-flow"
keywords = ["tui", "ratatui", "terminal", "graph", "flow"]
repository = "https://github.com/Liangdi/ratatui-flow"
readme = "README.md"
license = "MIT"

[dependencies]
ratatui = { version = "0.30.0", default-features = false }
log = "0.4.17"
unicode-width = "0.2"

[dev-dependencies]
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29"
criterion = "0.8"
ratatui-sci-fi = "0.2.0"

[[bench]]
name = "calculate"
harness = false
